# microRAG

./: .gitignore  README.md
microRAG/: core_dsa.py  main.py  mock_claims.txt  pyproject.toml  rag_engine.py
