[project]
name = "microrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "huggingface-hub>=1.10.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "numpy>=2.4.4",
    "sentence-transformers>=5.4.0",
    "uvicorn>=0.44.0",
]
